@@ -1,3 +1,6 @@
+2006-12-04  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amtape.h: Remove file.
+
 2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/sendbackup.c: Kill dump process on error.
 
